--- a/Codigo/pedidos-pendientes.html
+++ b/Codigo/pedidos-pendientes.html
@@ -15,7 +15,7 @@
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="description" content="Materialize is a Material Design Admin Template,It's modern, responsive and based on Material Design by Google. ">
     <meta name="keywords" content="materialize, admin template, dashboard template, flat admin template, responsive admin template,">
-    <title>Page Blank | Materialize - Material Design Admin Template</title>
+    <title>Pedidos</title>
 
     <!-- Favicons-->
     <link rel="icon" href="images/favicon/logofav.png" sizes="32x32">
@@ -141,17 +141,18 @@
       <div class="container">
         <div class="section">
           <div class="divider"></div>
-          <div class="row">
+         <!-- PROPUESTA CON CARDS -->
+         <!--  <div class="row">
             <div class="col s12 m6 l4">
-                <div class="card  red">
-                      <div class="card-content white-text">
+                <div class="card  yellow">
+                      <div class="card-content text">
                         <span class="card-title">Pedido 1</span>
                         <p>1 Pollo al Horno con Doradas</p>
                         <p>2 Pollo al Horno con Arroz c/crema</p>
                       </div>
                       <div class="card-action">
                         <a href="#" class="lime-text text-accent-1">Preparar</a>
-                        <!-- <a href="#" class="lime-text text-accent-1">This is a link</a> -->
+                        <a href="#" class="lime-text text-accent-1">This is a link</a>
                       </div>
                     </div>
             </div>
@@ -163,7 +164,7 @@
                       </div>
                       <div class="card-action">
                         <a href="#" class="lime-text text-accent-1">Finalizado</a>
-                        <!-- <a href="#" class="lime-text text-accent-1">This is a link</a> -->
+                        <a href="#" class="lime-text text-accent-1">This is a link</a>
                       </div>
                     </div>
             </div>
@@ -175,11 +176,91 @@
                       </div>
                       <div class="card-action">
                         <a href="#" class="lime-text text-accent-1">Finalizado</a>
-                        <!-- <a href="#" class="lime-text text-accent-1">This is a link</a> -->
+                        <a href="#" class="lime-text text-accent-1">This is a link</a>
                       </div>
                     </div>
             </div>  
-          </div>
+          </div> -->
+           <div id="multi-color-tab" class="section">
+                  <h4 class="header">Multi Color with icon tab</h4>
+                  <div class="row">
+                    <div class="col s12 m8 l9">
+                      <div class="row">
+                        <div class="col s12">
+                          <ul class="tabs tab-demo-active z-depth-1">
+                            <li class="tab col s3"><a class="white-text red darken-1 waves-effect waves-light" href="#Pendientes"><i class="mdi-action-perm-identity"></i>Pendientes</a>
+                            </li>
+                            <li class="tab col s3"><a class="white-text light-blue darken-1 waves-effect waves-light active" href="#Preparacion"><i class="mdi-action-settings-display"></i> En Preparacion</a>
+                            </li>
+                            <li class="tab col s3"><a class="white-text green darken-1 waves-effect waves-light" href="#Finalizados"><i class="mdi-action-speaker-notes"></i> Finalizados </a>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="col s12">
+                          <div id="Pendientes" class="col s12  red lighten-3">
+                            <table>
+                                <thead>
+                                  <tr>
+                                    <th data-field="id">Numero</th>
+                                    <th data-field="item">Pedido</th>
+                                    <th data-field="cantidad">Cantidad</th>
+                                  </tr>
+                                </thead>
+                                <tbody ng-repeat = "pedido in pedidos | filter:'Pendiente'">
+                                  <tr>
+                                    <td ng-bind="pedido.numero"></td>
+                                    <td ng-bind="pedido.items[0].pedido"></td>
+                                    <td ng-bind="pedido.items[0].cantidad"></td>
+                                    <td><a ng-click="prepararPedido(pedido)" href=""><i class="small tooltipped red-text mdi-content-add-circle-outline" data-position="bottom" data-delay="50" data-tooltip="Comenzar a Preparar"></i></a> </td>
+                                  </tr>
+                                </tbody>
+                            </table>
+                          </div>
+                          <div id="Preparacion" class="col s12  light-blue lighten-3">
+                            <table>
+                                <thead>
+                                  <tr>
+                                    <th data-field="id">Numero</th>
+                                    <th data-field="item">Pedido</th>
+                                    <th data-field="cantidad">Cantidad</th>
+                                  </tr>
+                                </thead>
+
+                                <tbody ng-repeat = "pedido in pedidos | filter:'Preparacion'">
+                                  <tr>
+                                    <td ng-bind="pedido.numero"></td>
+                                    <td ng-bind="pedido.items[0].pedido"></td>
+                                    <td ng-bind="pedido.items[0].cantidad"></td>
+                                    <td><a ng-click="finalizarPedido(pedido)" href=""><i class="small tooltipped blue-text mdi-content-add-circle-outline" data-position="bottom" data-delay="50" data-tooltip="Finalizar"></i></a> </td>
+                                  </tr>
+                                </tbody>
+                            </table>
+                          </div>
+                          <div id="Finalizados" class="col s12  green lighten-3">
+                            <table>
+                                <thead>
+                                  <tr>
+                                    <th data-field="id">Numero</th>
+                                    <th data-field="item">Pedido</th>
+                                    <th data-field="cantidad">Cantidad</th>
+                                  </tr>
+                                </thead>
+
+                                <tbody ng-repeat = "pedido in pedidos | filter:'Finalizado'">
+                                  <tr>
+                                    <td ng-bind="pedido.numero"></td>
+                                    <td ng-bind="pedido.items[0].pedido"></td>
+                                    <td ng-bind="pedido.items[0].cantidad"></td>
+                                  </tr>
+                                </tbody>
+                            </table>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
 
         <!-- Floating Action Button  BOTONO CHIQUITO DEL COSTADO-->
     <!-- <div class="fixed-action-btn" style="bottom: 50px; right: 19px;">
@@ -252,6 +333,11 @@
     
     <!--custom-script.js - Add your own theme custom JS-->
     <script type="text/javascript" src="js/custom-script.js"></script>
+    <script>
+        $(document).ready(function(){
+           $('.tooltipped').tooltip({delay: 50});
+          });
+    </script>
     
   </body>
 
