--- a/Codigo/pedidos-pendientes.html
+++ b/Codigo/pedidos-pendientes.html
@@ -182,9 +182,8 @@
             </div>  
           </div> -->
            <div id="multi-color-tab" class="section">
-                  <h4 class="header">Multi Color with icon tab</h4>
                   <div class="row">
-                    <div class="col s12 m8 l9">
+                    <div class="col s12 m12 l12">
                       <div class="row">
                         <div class="col s12">
                           <ul class="tabs tab-demo-active z-depth-1">
@@ -198,7 +197,8 @@
                         </div>
                         <div class="col s12">
                           <div id="Pendientes" class="col s12  red lighten-3">
-                            <table>
+                            <div class="container">
+                              <table>
                                 <thead>
                                   <tr>
                                     <th data-field="id">Numero</th>
@@ -211,13 +211,16 @@
                                     <td ng-bind="pedido.numero"></td>
                                     <td ng-bind="pedido.items[0].pedido"></td>
                                     <td ng-bind="pedido.items[0].cantidad"></td>
-                                    <td><a ng-click="prepararPedido(pedido)" href=""><i class="small tooltipped red-text mdi-content-add-circle-outline" data-position="bottom" data-delay="50" data-tooltip="Comenzar a Preparar"></i></a> </td>
+                                    <td><a ng-click="prepararPedido(pedido)" href=""><i class="small red-text mdi-action-exit-to-app"></i></a> </td>
                                   </tr>
                                 </tbody>
-                            </table>
-                          </div>
+                              </table>
+                            </div>
+                                                            
+                            </div>
                           <div id="Preparacion" class="col s12  light-blue lighten-3">
-                            <table>
+                            <div class="container">
+                              <table>
                                 <thead>
                                   <tr>
                                     <th data-field="id">Numero</th>
@@ -231,13 +234,15 @@
                                     <td ng-bind="pedido.numero"></td>
                                     <td ng-bind="pedido.items[0].pedido"></td>
                                     <td ng-bind="pedido.items[0].cantidad"></td>
-                                    <td><a ng-click="finalizarPedido(pedido)" href=""><i class="small tooltipped blue-text mdi-content-add-circle-outline" data-position="bottom" data-delay="50" data-tooltip="Finalizar"></i></a> </td>
+                                    <td><a ng-click="finalizarPedido(pedido)" href=""><i class="small blue-text mdi-action-exit-to-app" ></i></a> </td>
                                   </tr>
                                 </tbody>
-                            </table>
+                              </table>
+                            </div>
                           </div>
                           <div id="Finalizados" class="col s12  green lighten-3">
-                            <table>
+                           <div class="container">
+                             <table>
                                 <thead>
                                   <tr>
                                     <th data-field="id">Numero</th>
@@ -253,12 +258,14 @@
                                     <td ng-bind="pedido.items[0].cantidad"></td>
                                   </tr>
                                 </tbody>
-                            </table>
+                              </table>
+                           </div> 
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
+                  
                 </div>
 
 
